# accerciser-mirror

./: configure.in
help/: Makefile.am
help/C/: introduction.page  ipython_plugin.page
macaroon/macaroon/playback/: keypress_actions.py  sequence.py  sequence_step.py  utils.py
macaroon/macaroon/record/: about.py  main.py  script_factory.py
plugins/: api_view.py  console.py  event_monitor.py  event_monitor.ui  interface_view.py  interface_view.ui  ipython_view.py  quick_select.py  script_recorder.py  validate.py  validate.ui
src/: accerciser.in
src/lib/accerciser/: about_dialog.py  accerciser.py  accessible_treeview.py  bookmarks.py  hotkey_manager.py  icons.py  main_window.py  node.py  prefs_dialog.py  script_playback.py  ui_manager.py
src/lib/accerciser/plugin/: base_plugin.py  message.py  plugin_manager.py  view.py
