include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = accerciser

DOC_FIGURES = \
       figures/accerciser-logo.png \
       figures/highlighting.png \
       figures/accerciser_preferences.png \
       figures/interface_viewer_plugin.png \
       figures/accerciser-view.png \
       figures/IPython_plugin.png \
       figures/accessible_tree.png \
       figures/plugins.png \
       figures/api_browser.png \
       figures/tree_view_accerciser.png \
       figures/event_monitor_plugin.png \
       figures/validator_app_tree.png \
       figures/event_monitor.png \
       figures/validator_report.png \
       figures/global-hotkeys.png 

DOC_PAGES = \
       api_browser_plugin.page \
       introduction.page \
       desktop_tree_view.page \
       ipython_plugin.page \
       event_monitor_plugin.page \
       howto_setting_up_accerciser.page \
       preferences.page \
       howto_write_a_plugin.page \
       quick_select_plugin.page \
       index.page \
       validator_plugin.page \
       interface_viewer_plugin.page

DOC_LINGUAS = ca cs de el en_GB es fr gl it ja oc pt_BR sl sv uk zh_CN
